# OOP

./: README.md
laba1/: CMakeLists.txt  README.md  main.cpp  solution.cpp  solution.h  tests.cpp
laba2/: CMakeLists.txt  README.md  main.cpp  money.cpp  money.h  tests.cpp
